<resources>
    <string name="no_title">No title</string>
    <string name="configure_title_label">Title</string>
    <string name="configure_date_label">Date</string>
    <string name="configure_save">Save</string>
    <string name="icon_copyright">Application icon:\nCandy Clock, © 2008 cemagraphics\nused with permission</string>
    <string name="app_name">FYP</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_subject">Subject</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_expenditure">Expenditure Planning</string>
    <string name="tab_text_0">ALL</string>
    <string name="tab_text_1">ASSIGNMENT</string>
    <string name="tab_text_2">EXAM</string>
    <string name="tab_text_3">TO-DO LIST</string>
    <string name="action_settings">Settings</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time</string>
    <string-array name="spinner_option">
        <item>Assignment</item>
        <item>Exam</item>
        <item>To-do list</item>
    </string-array>
    <string-array name="spinner_expenses_type">
        <item>Education</item>
        <item>Entertainment</item>
        <item>Shopping</item>
        <item>Auto and Transport</item>
        <item>Personal Care</item>
        <item>Health and Fitness</item>
        <item>Food and Dining</item>
        <item>Fees and Charges</item>
        <item>Others</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

</resources>
