<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_timetable"
        android:title="@string/title_timetable" />

    <item
        android:id="@+id/navigation_subject"
        android:icon="@drawable/ic_subject"
        android:title="@string/title_subject" />

    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/title_feedback" />

    <item
        android:id="@+id/navigation_expenditure"
        android:icon="@drawable/ic_expenditure"
        android:title="@string/title_expenditure" />

</menu>
